første commit på mandag

--- a/m3/Dockerfile
+++ b/m3/Dockerfile
@@ -3,4 +3,7 @@ FROM httpd:alpine
 COPY cgi/* /usr/local/apache2/cgi-bin/
 COPY httpd.conf /usr/local/apache2/conf/httpd.conf
 
+RUN apk update
+RUN apk add curl
+
 EXPOSE 80
